src/Resources/hql.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Lenguaje: peg$parseLenguaje },
      peg$startRuleFunction  = peg$parseLenguaje,

      peg$c0 = function(sentencias) { return sentencias },
      peg$c1 = "CREATE TABLE",
      peg$c2 = peg$literalExpectation("CREATE TABLE", false),
      peg$c3 = "create table",
      peg$c4 = peg$literalExpectation("create table", false),
      peg$c5 = "(",
      peg$c6 = peg$literalExpectation("(", false),
      peg$c7 = ");",
      peg$c8 = peg$literalExpectation(");", false),
      peg$c9 = function(token1, tabla, token2, atributos, token3, composicion, token4) { return { tabla, atributos: atributos ? atributos : [], composicion, script: text() } },
      peg$c10 = function(sentencia1, sentenciaN) { return [].concat([sentencia1]).concat(sentenciaN); },
      peg$c11 = "CONSTRAINT",
      peg$c12 = peg$literalExpectation("CONSTRAINT", false),
      peg$c13 = "UNIQUE",
      peg$c14 = peg$literalExpectation("UNIQUE", false),
      peg$c15 = ")",
      peg$c16 = peg$literalExpectation(")", false),
      peg$c17 = function(token1, token2, token3, columna, token4, token5, token6, columnas_implicadas, token7) { return { sentencia: "restricción única", columna, columnas_implicadas } },
      peg$c18 = function(columna, columnas) { return [].concat([ columna ]).concat(columnas) },
      peg$c19 = ",",
      peg$c20 = peg$literalExpectation(",", false),
      peg$c21 = function(token1, token2, id) { return id },
      peg$c22 = function(token1, columna, token2, tipo, detalles, atributos) { return { sentencia: "columna", columna, tipo, detalles, atributos: atributos ? atributos : [] } },
      peg$c23 = "\n",
      peg$c24 = peg$literalExpectation("\n", false),
      peg$c25 = "/*",
      peg$c26 = peg$literalExpectation("/*", false),
      peg$c27 = peg$anyExpectation(),
      peg$c28 = function() { return text().trim() },
      peg$c29 = "*/",
      peg$c30 = peg$literalExpectation("*/", false),
      peg$c31 = function(token1, atributos, token2) { return atributos },
      peg$c32 = function(atributos) { return atributos ? atributos : [] },
      peg$c33 = "@",
      peg$c34 = peg$literalExpectation("@", false),
      peg$c35 = function(token1, hiperatributo, subatributos) { return subatributos ? [hiperatributo, subatributos] : hiperatributo },
      peg$c36 = "@comprobar_permiso:",
      peg$c37 = peg$literalExpectation("@comprobar_permiso:", false),
      peg$c38 = function(valor) { return valor },
      peg$c39 = "@comprobar_restriccion:",
      peg$c40 = peg$literalExpectation("@comprobar_restriccion:", false),
      peg$c41 = "@interceptar:",
      peg$c42 = peg$literalExpectation("@interceptar:", false),
      peg$c43 = function() { return { tipo: "interceptar", eval: text() } },
      peg$c44 = function(al, si, entonces) { return {tipo:"comprobar_permiso",al,si,entonces}},
      peg$c45 = "al",
      peg$c46 = peg$literalExpectation("al", false),
      peg$c47 = function(ops) { return ops },
      peg$c48 = function(op, op_n) { return [op].concat(op_n) },
      peg$c49 = "|",
      peg$c50 = peg$literalExpectation("|", false),
      peg$c51 = function(op) { return op },
      peg$c52 = "select",
      peg$c53 = peg$literalExpectation("select", false),
      peg$c54 = "insert",
      peg$c55 = peg$literalExpectation("insert", false),
      peg$c56 = "update",
      peg$c57 = peg$literalExpectation("update", false),
      peg$c58 = "delete",
      peg$c59 = peg$literalExpectation("delete", false),
      peg$c60 = "getfile",
      peg$c61 = peg$literalExpectation("getfile", false),
      peg$c62 = "setfile",
      peg$c63 = peg$literalExpectation("setfile", false),
      peg$c64 = "si",
      peg$c65 = peg$literalExpectation("si", false),
      peg$c66 = function(condicional) { return condicional },
      peg$c67 = "entonces",
      peg$c68 = peg$literalExpectation("entonces", false),
      peg$c69 = function(reaccional) { return reaccional },
      peg$c70 = function() { return text() },
      peg$c71 = function(restriccion) { return restriccion },
      peg$c72 = "no es actualizable",
      peg$c73 = peg$literalExpectation("no es actualizable", false),
      peg$c74 = function(si) { return {tipo: "comprobar_restriccion", entidad: "no es actualizable", si } },
      peg$c75 = function() { return {tipo: "comprobar_restriccion", entidad: "no es actualizable", si: null } },
      peg$c76 = "no es eliminable",
      peg$c77 = peg$literalExpectation("no es eliminable", false),
      peg$c78 = function(si) { return {tipo: "comprobar_restriccion", entidad: "no es eliminable", si } },
      peg$c79 = function() { return {tipo: "comprobar_restriccion", entidad: "no es eliminable", si: null } },
      peg$c80 = "no es filtrable",
      peg$c81 = peg$literalExpectation("no es filtrable", false),
      peg$c82 = function(si) { return {tipo: "comprobar_restriccion", entidad: "no es filtrable", si } },
      peg$c83 = function() { return {tipo: "comprobar_restriccion", entidad: "no es filtrable", si: null } },
      peg$c84 = "no es insertable",
      peg$c85 = peg$literalExpectation("no es insertable", false),
      peg$c86 = function(si) { return {tipo: "comprobar_restriccion", entidad: "no es insertable", si } },
      peg$c87 = function() { return {tipo: "comprobar_restriccion", entidad: "no es insertable", si: null } },
      peg$c88 = "no es modificable",
      peg$c89 = peg$literalExpectation("no es modificable", false),
      peg$c90 = function(si) { return {tipo: "comprobar_restriccion", entidad: "no es modificable", si } },
      peg$c91 = function() { return {tipo: "comprobar_restriccion", entidad: "no es modificable", si: null } },
      peg$c92 = "no es ordenable",
      peg$c93 = peg$literalExpectation("no es ordenable", false),
      peg$c94 = function(si) { return {tipo: "comprobar_restriccion", entidad: "no es ordenable", si } },
      peg$c95 = function() { return {tipo: "comprobar_restriccion", entidad: "no es ordenable", si: null } },
      peg$c96 = "no es seleccionable",
      peg$c97 = peg$literalExpectation("no es seleccionable", false),
      peg$c98 = function(si) { return {tipo: "comprobar_restriccion", entidad: "no es seleccionable", si } },
      peg$c99 = function() { return {tipo: "comprobar_restriccion", entidad: "no es seleccionable", si } },
      peg$c100 = function(subatributos) { return subatributos },
      peg$c101 = "-",
      peg$c102 = peg$literalExpectation("-", false),
      peg$c103 = function(texto) { return texto.trim() },
      peg$c104 = "INTEGER",
      peg$c105 = peg$literalExpectation("INTEGER", false),
      peg$c106 = "integer",
      peg$c107 = peg$literalExpectation("integer", false),
      peg$c108 = "int",
      peg$c109 = peg$literalExpectation("int", false),
      peg$c110 = "VARCHAR",
      peg$c111 = peg$literalExpectation("VARCHAR", false),
      peg$c112 = "varchar",
      peg$c113 = peg$literalExpectation("varchar", false),
      peg$c114 = "TEXT",
      peg$c115 = peg$literalExpectation("TEXT", false),
      peg$c116 = "text",
      peg$c117 = peg$literalExpectation("text", false),
      peg$c118 = "DATETIME",
      peg$c119 = peg$literalExpectation("DATETIME", false),
      peg$c120 = "datetime",
      peg$c121 = peg$literalExpectation("datetime", false),
      peg$c122 = "DATE",
      peg$c123 = peg$literalExpectation("DATE", false),
      peg$c124 = "date",
      peg$c125 = peg$literalExpectation("date", false),
      peg$c126 = "TIMESTAMP",
      peg$c127 = peg$literalExpectation("TIMESTAMP", false),
      peg$c128 = "timestamp",
      peg$c129 = peg$literalExpectation("timestamp", false),
      peg$c130 = "TIME",
      peg$c131 = peg$literalExpectation("TIME", false),
      peg$c132 = "time",
      peg$c133 = peg$literalExpectation("time", false),
      peg$c134 = "REAL",
      peg$c135 = peg$literalExpectation("REAL", false),
      peg$c136 = "real",
      peg$c137 = peg$literalExpectation("real", false),
      peg$c138 = "BLOB",
      peg$c139 = peg$literalExpectation("BLOB", false),
      peg$c140 = "blob",
      peg$c141 = peg$literalExpectation("blob", false),
      peg$c142 = "PRIMARY KEY",
      peg$c143 = peg$literalExpectation("PRIMARY KEY", false),
      peg$c144 = "primary key",
      peg$c145 = peg$literalExpectation("primary key", false),
      peg$c146 = function(token1, token3, clave_1, clave_n, token4) { return { sentencia: "clave primaria", columnas: [clave_1].concat(clave_n || []) } },
      peg$c147 = "FOREIGN KEY",
      peg$c148 = peg$literalExpectation("FOREIGN KEY", false),
      peg$c149 = "foreign key",
      peg$c150 = peg$literalExpectation("foreign key", false),
      peg$c151 = "REFERENCES",
      peg$c152 = peg$literalExpectation("REFERENCES", false),
      peg$c153 = "references",
      peg$c154 = peg$literalExpectation("references", false),
      peg$c155 = function(token1, columna, token2, tabla_foranea, token3, columna_foranea, token4) { return { sentencia: "clave foránea", columna, tabla_foranea, columna_foranea } },
      peg$c156 = function(token1, sentencia) { return sentencia },
      peg$c157 = /^[A-Za-z_]/,
      peg$c158 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false),
      peg$c159 = /^[A-Za-z0-9_$]/,
      peg$c160 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", "$"], false, false),
      peg$c161 = function(id) { return id },
      peg$c162 = peg$otherExpectation("salto"),
      peg$c163 = "\r\n",
      peg$c164 = peg$literalExpectation("\r\n", false),
      peg$c165 = "\r",
      peg$c166 = peg$literalExpectation("\r", false),
      peg$c167 = function() {},
      peg$c168 = peg$otherExpectation("espacio"),
      peg$c169 = "\t",
      peg$c170 = peg$literalExpectation("\t", false),
      peg$c171 = " ",
      peg$c172 = peg$literalExpectation(" ", false),
      peg$c173 = peg$otherExpectation("espacio o salto"),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseLenguaje() {
    var s0;

    s0 = peg$parseSentencias();

    return s0;
  }

  function peg$parseSentencias() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parse_();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parse_();
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseSentencia_CREATE_TABLE();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseSentencia_CREATE_TABLE();
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parse_();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parse_();
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSentencia_CREATE_TABLE() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parse_();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parse_();
    }
    if (s2 !== peg$FAILED) {
      if (input.substr(peg$currPos, 12) === peg$c1) {
        s3 = peg$c1;
        peg$currPos += 12;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s3 === peg$FAILED) {
        if (input.substr(peg$currPos, 12) === peg$c3) {
          s3 = peg$c3;
          peg$currPos += 12;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = [];
        s5 = peg$parse_();
        if (s5 !== peg$FAILED) {
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
        } else {
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s2 = [s2, s3, s4];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseId();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parse_();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parse_();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseHiperdetalles_de_columna();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$currPos;
            s6 = [];
            s7 = peg$parse_();
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parse_();
            }
            if (s6 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 40) {
                s7 = peg$c5;
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c6); }
              }
              if (s7 !== peg$FAILED) {
                s8 = [];
                s9 = peg$parse_();
                while (s9 !== peg$FAILED) {
                  s8.push(s9);
                  s9 = peg$parse_();
                }
                if (s8 !== peg$FAILED) {
                  s6 = [s6, s7, s8];
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseComposicion_de_tabla();
              if (s6 !== peg$FAILED) {
                s7 = peg$currPos;
                s8 = [];
                s9 = peg$parse_();
                while (s9 !== peg$FAILED) {
                  s8.push(s9);
                  s9 = peg$parse_();
                }
                if (s8 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c7) {
                    s9 = peg$c7;
                    peg$currPos += 2;
                  } else {
                    s9 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c8); }
                  }
                  if (s9 !== peg$FAILED) {
                    s8 = [s8, s9];
                    s7 = s8;
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c9(s1, s2, s3, s4, s5, s6, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseComposicion_de_tabla() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseSentencia_CREATE_COLUMN_o_FOREIGN_KEY_o_PRIMARY_KEY_1();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseSentencia_CREATE_COLUMN_o_FOREIGN_KEY_o_PRIMARY_KEY_n();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseSentencia_CREATE_COLUMN_o_FOREIGN_KEY_o_PRIMARY_KEY_n();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSentencia_CREATE_COLUMN_o_FOREIGN_KEY_o_PRIMARY_KEY_1() {
    var s0;

    s0 = peg$parseSentencia_FOREIGN_KEY();
    if (s0 === peg$FAILED) {
      s0 = peg$parseSentencia_CONSTRAINT_UNIQUE();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSentencia_CREATE_COLUMN();
        if (s0 === peg$FAILED) {
          s0 = peg$parseSentencia_PRIMARY_KEY();
        }
      }
    }

    return s0;
  }

  function peg$parseSentencia_CONSTRAINT_UNIQUE() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;
